--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,74 @@
-.container {
-  display: grid;
-  gap: 15px 15px;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 1fr 5fr 1fr;
-  background-color: black;
-  height: 95vh;
-  padding: 0.25rem;
-  border-radius: 0.25rem;
+* {
+  box-sizing: border-box;
 }
+body {
+  margin: 0;
+  padding: 0;
+}
+.container {
+  overflow: auto;
+  display: grid;
+  height: 100vh;
+  gap: 15px;
+  padding: 4px;
+  grid-template-areas: 
+    "header header"
+    "sidebar nav"
+    "sidebar article"
+    "footer footer";
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  grid-template-columns: 1fr 3fr;
 
-.container>div {
-  border-radius: 0.25rem;
-  border: 2px solid peachpuff;
+  background-color: red;
 }
 
 .header {
-  grid-column: 1/3;
-  grid-row: 1/2;
-  background-color: red;
+  text-align: center;
+  color: #fff;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  padding: 12px;
+  border-radius: 10px;
+  background-color: yellow;
+  grid-area: header;
 }
-.side {
-  grid-column: 1/2;
-  grid-row: 2/-2;
-  background-color: blue;
+.sidebar {
+  text-align: center;
+  color: #fff;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  padding: 12px;
+  border-radius: 10px;
+  background-color:deeppink;
+  grid-area: sidebar;
 }
 .nav {
-  grid-column: 2/3;
-  grid-row: 2/3;
-  background-color: green;
+  text-align: center;
+  color: #fff;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  padding: 12px;
+  border-radius: 10px;
+  background-color: cyan;
+  grid-area: nav;
 }
-.art {
-  grid-column: 2/3;
-  grid-row: 3/-2;
-  background-color: purple;
+.article {
+  text-align: center;
+  color: #fff;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  padding: 12px;
+  border-radius: 10px;
+  background-color: gray;
+  grid-area: article;
 }
-.foot {
-  grid-column: 1/3;
-  grid-row: -2/-1;
-  background-color: orange;
+.footer {
+  text-align: center;
+  color: #fff;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  padding: 12px;
+  border-radius: 10px;
+  background-color: slategray;
+  grid-area: footer;
 }
