--- a/styles.css
+++ b/styles.css
@@ -1,74 +1,123 @@
 * {
-  box-sizing: border-box;
-}
-body {
   margin: 0;
   padding: 0;
 }
-.container {
-  overflow: auto;
-  display: grid;
-  height: 100vh;
-  gap: 15px;
-  padding: 4px;
-  grid-template-areas: 
-    "header header"
-    "sidebar nav"
-    "sidebar article"
-    "footer footer";
-  grid-template-rows: 1fr 1fr 5fr 1fr;
-  grid-template-columns: 1fr 3fr;
 
-  background-color: red;
+.container {
+  text-align: center;
+  display: grid;
+  gap: 4px;
+  grid-template-columns: 1fr 4fr;
+}
+
+.container div {
+  padding: 15px;
+  font-size: 32px;
+  font-family: Helvetica;
+  font-weight: bold;
+  color: white;
 }
 
 .header {
-  text-align: center;
-  color: #fff;
-  font-family: sans-serif;
-  font-size: 1.5rem;
-  padding: 12px;
-  border-radius: 10px;
-  background-color: yellow;
-  grid-area: header;
+  background-color: #393f4d;
+  display: grid;
+  grid-template-columns: 2fr 4fr;
+  grid-column: 1/-1;
 }
+
+.menu ul,
+.menu li {
+  font-size: 16px;
+}
+.menu > ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  list-style-type: none;
+}
+
 .sidebar {
-  text-align: center;
-  color: #fff;
-  font-family: sans-serif;
-  font-size: 1.5rem;
-  padding: 12px;
-  border-radius: 10px;
-  background-color:deeppink;
-  grid-area: sidebar;
+  background-color: #FF7755;
+  gap: 50px;
+  grid-column: 1/2;
+  grid-row: 2/4;
+  display: grid;
 }
+
+.sidebar .photo {
+  background-color: white;
+  color: black;
+  font-size: 12px;
+  font-weight: normal;
+  border-radius: 10px;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+
+
+.sidebar .side-content {
+  background-color: white;
+  color: black;
+  font-size: 16px;
+  font-weight: normal;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+
 .nav {
-  text-align: center;
-  color: #fff;
-  font-family: sans-serif;
-  font-size: 1.5rem;
-  padding: 12px;
-  border-radius: 10px;
-  background-color: cyan;
-  grid-area: nav;
+  background-color: #FF7755;
+  grid-column: 2/3;
 }
+.nav > ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style-type: none;
+}
+.nav ul li {
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
 .article {
-  text-align: center;
-  color: #fff;
-  font-family: sans-serif;
-  font-size: 1.5rem;
-  padding: 12px;
-  border-radius: 10px;
-  background-color: gray;
-  grid-area: article;
+  background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+  grid-column: 2/3;
 }
-.footer {
-  text-align: center;
-  color: #fff;
+
+.article p {
+  font-size: 18px;
   font-family: sans-serif;
-  font-size: 1.5rem;
-  padding: 12px;
-  border-radius: 10px;
-  background-color: slategray;
-  grid-area: footer;
+  color: white;
+  text-align: left;
+}
+
+.article .card {
+  background-color: #FFFFFF;
+  color: black;
+  text-align: center;
+  height: 200px;
+}
+
+.card p {
+  color: black;
+  font-weight: normal;
+  font-size: 14px;
+}
+
+.card .title {
+  font-size: 18px;
+  text-align: center;
+}
+
+.footer {
+  background-color: #393f4d;
+  grid-column: 1/-1;
+}
+
+.footer p {
+  font-size: 13px;
+  font-weight: normal;  
 }
