--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
+.turn {
+  font-size: 2rem;
+  margin-top: 10vh;
+  text-align: center;
+  width: 100vw;
+}
 .board {
   display: grid;
-  height: 500px;
-  width: 500px;
+  height: 100vw;
+  width: 100vw;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(6, 1fr);
   border: 1px solid black;
-  gap: 2px;
-  padding: 2px;
+  gap: 1vw;
+  padding: 1vw;
   background-color: yellow;
+  margin-top: 20vh;
 }
-
 .cell {
   display: flex;
   justify-content: center;
@@ -19,4 +25,49 @@
   border: 1px solid grey;
   background: lightyellow;
   cursor: pointer;
+}
+
+/* Start Page */
+.start-container {
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  grid-template-rows: 5fr 1fr 1fr 1fr 5fr;
+  height: 100vh;
+}
+label[for="player-one"] {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+#player-one {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+label[for="player-two"] {
+  grid-column: 1/2;
+  grid-row: 3/5;
+}
+#player-two {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+.start-btn {
+  grid-column: 1/3;
+  grid-row: 4/5;
+}
+
+/* Win Page */
+.winner-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 5fr 1fr 1fr 5fr;
+  height: 100vh;
+}
+.announcement {
+  grid-row: 2/3 ;
+  justify-self: center;
+  align-self: center;
+  font-size: 1.745rem;
+}
+.restart-btn {
+  grid-row: 3/4 ;
 }
