--- a/style.css
+++ b/style.css
@@ -1,63 +1,27 @@
-.container {
-  background-color: rgb(0, 0, 25);
-  height: 100vh;
-  width: 100vw;
-  font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  flex-direction: column;
+html,
+body {
+  height: 100%;
 }
 
-/* Mobile Phone */
-@media only screen and (max-width: 38em) {
-  .container {
-    background-color: rgb(25, 0, 0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.content {
+  height: 100%;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .slides {
-    height: 100vw;
-    width: 100vw;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .slides > button {
-    border: none;
-    width: 4rem;
-    height: 100%;
-    color: white;
-  }
-  .slides > button:hover {
-    background-color: rgba(0, 0, 0, 0.25);
-  }
-  .slides > .button1 {
-    background-color: transparent;
-    background-image: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.65),
-      transparent
-    );
-  }
-  .slides > .button2 {
-    background-color: transparent;
-    background-image: linear-gradient(
-      to left,
-      rgba(0, 0, 0, 0.65),
-      transparent
-    );
-  }
+#main-form {
+  height: 70%;
+  width: 60vw;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(15, 1fr);
+}
 
-  .dot-container {
-    height: 2rem;
-    width: 7.5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-  }
+#main-form > label {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding-bottom: 0.4rem;
 }
