--- a/style.css
+++ b/style.css
@@ -1,9 +1,38 @@
+body {
+  display: flex;
+  justify-content: center;
+}
+#content {
+  width: 40rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(44, 44, 44);
+}
+#main-title {
+  font-size: 1.5rem;
+  margin-top: 1.25rem;
+}
+#title-desc {
+  font-size: 1.25rem;
+  margin: 1.25rem 0;
+}
 section#top-section {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-}
 
+  /* background-color: gray; */
+}
+#top-section input {
+  height: 1.5rem;
+  border-radius: 0.25rem;
+  border: 1px solid lightgray;
+}
+#top-section input[type='text'] {
+  width: 18rem;
+}
+#top-section input[type='email'] {
+  width: 38rem;
+}
 #first-name-title,
 #last-name-title,
 #email-title {
@@ -21,4 +50,14 @@ section#top-section {
 #email-whole {
   grid-column: 1/3;
   grid-row: 2/3;
+}
+
+/* Signature Section */
+#bottom-section {
+  display: flex;
+  flex-direction: column;
+}
+#signature-title {
+  display: flex;
+  flex-direction: row;
 }
