--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ section#top-section {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
+  height: 8rem;
 
   /* background-color: gray; */
 }
@@ -39,6 +40,12 @@ section#top-section {
   display: flex;
   flex-direction: row;
 }
+#top-section label {
+  font-size: 0.9rem;
+}
+#top-section p {
+  color: red;
+}
 #first-name-whole {
   grid-column: 1/2;
   grid-row: 1/2;
@@ -50,6 +57,22 @@ section#top-section {
 #email-whole {
   grid-column: 1/3;
   grid-row: 2/3;
+}
+
+/* Middle Section */
+#terms-title {
+  font-size: 0.9rem;
+}
+#middle-terms {
+  width: 38rem;
+  height: 19rem;
+  border-radius: 0.25rem;
+  border: 1px solid lightgray;
+  resize: none;
+  font-size: 0.9rem;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(233, 233, 233);
+  color: rgb(92, 92, 92);
 }
 
 /* Signature Section */
